# GUI

./: .clang-format  .eslintrc.cjs  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  CMakeLists.txt  CMakePresets.json  README.md  clang-format-all.sh  clang-format-check-all.sh  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  webpack.config.js
.github/workflows/: lint.yaml
.storybook/: main.ts
CEF_App/: CMakeLists.txt
CEF_App/src/: main.cpp
CMake/: Clang.cmake  GCC.cmake  ProjectOptions.cmake
Frontend/src/: custom.d.ts  index.html  index.scss  index.ts
Frontend/src/Assets/Fonts/: Lato.scss
Frontend/src/Assets/Fonts/Lato/: OFL.txt
public/: clang-format-check-all.sh
src/: app.d.ts
src/lib/: Animation.svelte
src/lib/assets/Fonts/: Lato.scss
src/lib/assets/Fonts/Lato/: OFL.txt
src/lib/components/: Animation.svelte
src/routes/: +page.svelte
src/stories/: Animation.stories.ts
